# Rust_Challenge

l0/: .env.example  Cargo.toml  README.md
l0/resources/: init_schema.sql  insert_dummy_data.sql  make_get.sh  make_post.sh
l0/src/: main.rs  router.rs
l0/src/handlers/order/: order.rs  order_create.rs
l0/src/model/: order.rs
