[package]
name = "l0"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7.5"
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
postgres= "0.19.8"
dotenv = "0.15.0"
once_cell = "1.19.0"
sqlx = { version = "0.8.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde_derive = "1.0.209"
